--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^6.7.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
